--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,24 @@
-spring.thymeleaf.cache=false
-spring.devtools.livereload.enabled=true
+server.port=9009
 
+spring.thymeleaf.cache=false
+#spring.devtools.livereload.enabled=true
+spring.devtools.livereload.enabled=false
+spring.output.ansi.enabled=always
 
 static.resource.location=classpath:/static/
 
+#server.tomcat.basedir=src/main/webapp
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+#spring.view.prefix:/WEB-INF/
+#spring.view.suffix:.jsp
+#spring.view.view-names:jsp/*
+#spring.thymeleaf.view-names:thymeleaf/*
 
 logging.level.root=DEBUG
-logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework=INFO
+#logging.level.org.springframework.boo
+logging.level.org.apache=INFO
+logging.level.sun.rmi=INFO
 logging.level.org.hibernate=ERROR
 
